[project]
name = "medorg"
version = "0.1.0"
description = "Media organizer"
requires-python = ">=3.12,<4.0"
authors = [{name = "Chris Hopkins", email = "cbehopkins@gmail.com"}]
license = {text = "MIT"}
dependencies = [
    "click>=8.2.0",
    "aiofiles==23.2.1",
    "aiopath>=0.7.0",
    "lxml>=6.1.0",
    "SQLAlchemy==2.0.25",
    "aiosqlite==0.20.0",
    "rich>=13.0.0",
    "greenlet>=3.0.0",
    "InquirerPy>=0.3.0",
]

[project.scripts]
medback = "medorg.cli.medback:cli"
medtools = "medorg.cli.medtools:cli"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.11.13",
    "tox>=4.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# uv reads `.python-version`; keep this repo on Python 3.12 until aiopath supports newer CPython releases.
[tool.uv]
link-mode = "copy"
